# batch-bayeso

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-examples.txt  requirements.txt  setup.py
batch_bayeso/: __init__.py  base_batch_bo.py  batch_bo_constant.py  batch_bo_local_penalization.py  batch_bo_lp.py  batch_bo_prediction.py  batch_bo_pure_exploration.py  batch_bo_random.py  wrappers_batch_bo.py
examples/: run_bbo.py  script_run_bbo.sh
src/: __init__.py  run_batch_bo.py  script_run_batch_bo.sh
src/bbo/: __init__.py  bbo_lp.py
